kogito-quarkus/addons/fabric8-kubernetes-service-catalog/runtime/src/test/resources/ingress/ingress-with-tls-and-host.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress-tls
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hello.host.org
    secretName: hello-app-tls
  rules:
  - host: "hello.host.org"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-service
            port:
              number: 80
status:
  loadBalancer:
    ingress:
    - ip: 80.80.25.9
